--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
     <section class="section ow ">
         <div class="container container-center">
-            <h1 class="project-header">Technologies</h1>
-            <p>I'm familiar with HTML5, CSS3,  JavaScript and Web Hosting</p>
+            <h1 class="project-header">BI Tools and Languages </h1>
+            <p>I'm familiar with  Power BI Desktop,Power Query Editor, Power BI Service, Power BI Data Gateway, Excel,HTML5, CSS3,  JavaScript and Web Hosting</p>
         </div>
     </section>
 
